<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/To"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Portada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_del_la_aplicacion_un_topo"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintEnd_toStartOf="@+id/margen_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/margen_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/_9aeb65732bcd87615d27985" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_botom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margen_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margen_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <Button
        android:id="@+id/ToPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebas"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/margen_right"
        app:layout_constraintStart_toStartOf="@+id/margen_left"
        app:layout_constraintTop_toTopOf="@+id/Portada" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/margen_right"
        app:layout_constraintStart_toStartOf="@+id/margen_left"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <Button
        android:id="@+id/Login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_green"
        android:text="@string/iniciar_sesion"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/img_botom"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/margen_left"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_green"
        android:text="@string/registrarse"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/img_botom"
        app:layout_constraintEnd_toStartOf="@+id/margen_right"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.44" />

    <TextView
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/error"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/Portada"
        app:layout_constraintEnd_toStartOf="@+id/margen_right"
        app:layout_constraintStart_toStartOf="@+id/margen_left"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

</androidx.constraintlayout.widget.ConstraintLayout>